# SpaceVoices

./: .env.example  .gitignore  INVESTIGATION.md  README.md  pyproject.toml
.github/workflows/: main.yml
app/: __init__.py  main.py
app/api/: routes.py  websockets.py
app/models/: script.py  space_event.py  twitter_account.py
app/services/: audio_processor.py  config.py  content_moderator.py  feature_flags.py  nlp_optimizer.py  rate_limiter.py  resource_manager.py  script_parser.py  spaces_interaction.py  twitter_account_manager.py  twitter_browser_service.py  twitter_service.py  voice_generator.py
scripts/: check_selenium.py  download_nltk_data.py  production_test.py
tests/: conftest.py  test_api.py  test_config.py  test_content_moderator.py  test_feature_flags.py  test_nlp_optimizer.py  test_nlp_resource_check.py  test_rate_limiter.py  test_resource_manager.py  test_script_optimization.py  test_script_parser.py  test_spaces_interaction.py  test_twitter_account_manager.py  test_twitter_browser_service.py  test_twitter_service.py  test_twitter_service_browser.py  test_websocket_error_handling.py  test_websockets.py
