[tool.poetry]
name = "spacevoices"
version = "0.1.0"
description = "Text to multi-voice podcast converter with Twitter Spaces integration"
authors = ["KYD <kyd@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
python-twitter = "^3.5"
ffmpeg-python = "^0.2.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.3"
tweepy = "^4.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
isort = "^5.13.2"
httpx = "^0.27.0"
